[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
dotenvy = "0.15.7"
rand = "0.9.2"
serde = { version = "1.0.225", features = ["derive"] }
serde_with = { version = "3.14.0", features = ["base64"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
