[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5", features = ["std"] }
axum = "0.8.4"
base64 = "0.22"
dotenvy = "0.15"
jsonwebtoken = "9.3"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3.14", features = ["base64"] }
tokio = { version = "1.47", features = ["rt-multi-thread"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-1"] }
uuid = { version = "1.18", features = ["v4", "serde"] }